--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,9 @@ find_package(DART 6.9.0 REQUIRED COMPONENTS ${required_components} CONFIG)
 add_executable(urdf_load urdf_load.cpp)
 target_link_libraries(urdf_load PUBLIC ${required_libraries})
 
+add_executable(frame_test frame_test.cpp)
+target_link_libraries(frame_test PUBLIC ${required_libraries})
+
+add_executable(custom_node_test custom_node_test.cpp)
+target_link_libraries(custom_node_test PUBLIC ${required_libraries})
+
