Update Handler.  Ready for Cartesian PD

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
         "memory_resource": "cpp",
         "set": "cpp",
         "string": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "referenced": "cpp"
     }
 }
