Add PD Controller, and External Force Test.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "string": "cpp",
         "cinttypes": "cpp",
         "referenced": "cpp",
-        "guieventadapter": "cpp"
+        "guieventadapter": "cpp",
+        "eventqueue": "cpp"
     }
 }
