Start full controller, this is broken release for now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
         "cinttypes": "cpp",
         "referenced": "cpp",
         "guieventadapter": "cpp",
-        "eventqueue": "cpp"
+        "eventqueue": "cpp",
+        "state": "cpp"
     }
 }
