--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,3 +16,7 @@ target_link_libraries(custom_node_test PUBLIC ${required_libraries})
 
 add_executable(input_handler_test input_handler_test.cpp)
 target_link_libraries(input_handler_test PUBLIC ${required_libraries})
+
+add_executable(full_test full_test.cpp)
+target_link_libraries(full_test PUBLIC ${required_libraries})
+
