State machine work.

--- a/src/nomad_controller/CMakeLists.txt
+++ b/src/nomad_controller/CMakeLists.txt
@@ -2,7 +2,11 @@
 cmake_minimum_Required(VERSION 3.5.1)
 
 set(NOMAD_CONTROLLER_SOURCES ${PROJECT_SOURCE_DIR}/src/nomad_controller/src/FiniteStateMachine.cpp
-${PROJECT_SOURCE_DIR}/src/nomad_controller/src/CrouchState.cpp
+${PROJECT_SOURCE_DIR}/src/nomad_controller/src/State.cpp
+${PROJECT_SOURCE_DIR}/src/nomad_controller/src/TransitionEvent.cpp
+${PROJECT_SOURCE_DIR}/src/nomad_controller/src/nomad_controller.cpp
+
+#${PROJECT_SOURCE_DIR}/src/nomad_controller/src/CrouchState.cpp
 #${PROJECT_SOURCE_DIR}/src/nomad_controller/src/StandState.cpp
 #${PROJECT_SOURCE_DIR}/src/nomad_controller/src/IdleState.cpp
 #${PROJECT_SOURCE_DIR}/src/nomad_controller/src/EmergencyStopState.cpp
