PD Standup on the full quad is working!

--- a/src/nomad_controller/CMakeLists.txt
+++ b/src/nomad_controller/CMakeLists.txt
@@ -8,8 +8,8 @@ ${PROJECT_SOURCE_DIR}/src/nomad_controller/src/nomad_controller.cpp
 ${PROJECT_SOURCE_DIR}/src/nomad_controller/src/NomadRobot.cpp
 ${PROJECT_SOURCE_DIR}/src/nomad_controller/src/NomadPrimaryControlFSM.cpp
 #${PROJECT_SOURCE_DIR}/src/nomad_controller/src/CrouchState.cpp
-#${PROJECT_SOURCE_DIR}/src/nomad_controller/src/StandState.cpp
-#${PROJECT_SOURCE_DIR}/src/nomad_controller/src/IdleState.cpp
+${PROJECT_SOURCE_DIR}/src/nomad_controller/src/StandState.cpp
+${PROJECT_SOURCE_DIR}/src/nomad_controller/src/IdleState.cpp
 #${PROJECT_SOURCE_DIR}/src/nomad_controller/src/EmergencyStopState.cpp
 ${PROJECT_SOURCE_DIR}/src/nomad_controller/src/CubicPolynomialTrajectory.cpp
 )
