Working on sim tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,9 @@
         "referenced": "cpp",
         "guieventadapter": "cpp",
         "eventqueue": "cpp",
-        "state": "cpp"
+        "state": "cpp",
+        "math": "cpp",
+        "bit": "cpp",
+        "ref_ptr": "cpp"
     }
 }
