--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ set(required_components utils-urdf gui-osg)
 set(required_libraries dart dart-gui dart-utils-urdf dart-gui-osg)
 find_package(DART 6.9.0 REQUIRED COMPONENTS ${required_components} CONFIG)
 
+add_executable(urdf_leg_test urdf_leg_test.cpp)
+target_link_libraries(urdf_leg_test PUBLIC ${required_libraries})
+
 add_executable(urdf_load urdf_load.cpp)
 target_link_libraries(urdf_load PUBLIC ${required_libraries})
 
