2 DOF Leg Test Jacobian

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
         "state": "cpp",
         "math": "cpp",
         "bit": "cpp",
-        "ref_ptr": "cpp"
+        "ref_ptr": "cpp",
+        "billboard": "cpp"
     }
 }
